feat(thumbnail): 添加修改缩略图接口
